--- a/main_app/templates/base-elements/footer.html
+++ b/main_app/templates/base-elements/footer.html
@@ -1,16 +1,7 @@
-<!-- <footer class="page-footer font-small fixed-bottom bg-light">
+<div class="myFooter">
+</div>
+<footer class="page-footer font-small fixed-bottom bg-dark footer-dark">
   <div class="footer-copyright text-center py-3">© 2019 Copyright:
     Friendly Gaming Community
   </div>
-</footer> -->
-
-<!-- <footer id="footer" class="footer navbar-fixed-bottom">
-    <div class="footer-bottom">
-        <div class="container ">
-            <div class="row">
-              <p class="pull-right">don_macaron </p>
-                <p class="pull-left">© 2020</p>
-            </div>
-        </div>
-    </div>
-</footer> -->
+</footer>
