--- a/main_app/templates/base-elements/navbar.html
+++ b/main_app/templates/base-elements/navbar.html
@@ -1,4 +1,21 @@
-{% load staticfiles %}
-<!-- <a class="navbar-brand" href="#">
-  <img src="{% static "img/logo.png" %}" width="40" height="39" alt="">
-</a> -->
+{% load static %}
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <a class="navbar-brand" href="index.html">
+    <img src="{% static "img/logo.png" %}" alt="FGC_app" width="38" height="38">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="btn btn-secondary" style="margin-right: 10px;" href="#">Домооой</a>
+      </li>
+      <li class="nav-item">
+        <button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#myModal">
+          Предложить фигню на эфир
+        </button>
+      </li>
+    </ul>
+  </div>
+</nav>
