--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,19 +1,57 @@
 <!DOCTYPE html>
-{% load staticfiles %}
+{% load static %}
 <html lang="ru" dir="ltr">
   <head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static "css/master.css" %}">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'master.css' %}">
+    <script src="{% static "js/scripts.js" %}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <meta charset="utf-8">
-    <title>FGC - Ваши предложения!</title>
+    <title>FGC HeadQuarters</title>
   </head>
-  <body class="d-flex flex-column">
+  <body class="class-body">
+    <!-- NAVBAR -->
     {% include 'base-elements/navbar.html' %}
-    {% block content %}
-    {% endblock %}
-    {% include 'base-elements/footer.html' %}
+    <!-- NAVBAR -->
+
+    <div class="container mt-3">
+
+      <!-- Nav tabs -->
+      <ul class="nav nav-tabs nav-justified" role="tablist">
+        <li class="nav-item">
+          <a class="nav-link active" data-toggle="tab" href="#home">Что это такое и кто мы?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#menu1">А это что за ебурга?</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" data-toggle="tab" href="#menu2">Так это же, мать их, ссылки!</a>
+        </li>
+      </ul>
+
+      <!-- Tab panes -->
+      <div class="tab-content">
+        <div id="home" class="container tab-pane active">
+          {% include 'tabs/home_tab.html' %}
+        </div>
+        <div id="menu1" class="container tab-pane fade"><br>
+          {% include 'tabs/game_list.html' %}
+        </div>
+        <div id="menu2" class="container tab-pane fade"><br>
+          {% include 'tabs/links.html' %}
+        </div>
+      </div>
+    </div>
+
+    <!-- FOOTER -->
+      {% include 'base-elements/footer.html'%}
+    <!-- FOOTER -->
+
+    <!-- THE MODAL -->
+    {% include 'base-elements/modal.html' %}
+    <!-- THE MODAL -->
   </body>
 </html>
