--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+АААААААААААААААААААААААААААААААААААААААААААААААААААААААААААААААААААА
 {% block content %}
 <div class="form">
   <form method = "post" enctype="multipart/form-data">
