--- a/main_app/templates/base-elements/modal.html
+++ b/main_app/templates/base-elements/modal.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load crispy_forms_tags %}
 <div class="modal fade" id="myModal">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -8,29 +9,31 @@
         <h4 class="modal-title">Добавить фигню в список</h4>
         <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
-
+      <!-- {% csrf_token %}
+      {{ form|crispy }} -->
+      <!-- <button type="submit">Submit New Game</button> -->
       <!-- Modal body -->
-      <form>
-      <div class="modal-body">
-          <div class="form-group">
-            <label for="game_name">Название </label>
-            <input type="text" class="form-control" id="game_name">
-          </div>
-          <div class="form-group">
-            <label for="game_description">Описание</label>
-            <textarea class="form-control" rows="5" id="game_description"></textarea>
-          </div>
-          <div class="form-group">
-            <label for="game_icon">картинка</label>
-            <input type="file" class="form-control" id="game_icon">
-          </div>
-      </div>
-
-      <!-- Modal footer -->
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-info">Предложить</button>
-        <button type="button" class="btn btn-dark" data-dismiss="modal">Зокрыть</button>
-      </div>
+      <form method="POST" enctype="multipart/form-data" name="GameForm">
+        {% csrf_token %}
+        <div class="modal-body">
+            <div class="form-group">
+              <label for="game_title">Название </label>
+              <input type="text" class="form-control" name="game_title">
+            </div>
+            <div class="form-group">
+              <label for="game_description">Описание</label>
+              <textarea class="form-control" rows="5" name="game_description"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="cover">картинка</label>
+              <input type="file" class="form-control" name="cover">
+            </div>
+        </div>
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="submit" class="btn btn-info">Предложить</button>
+          <button type="button" class="btn btn-dark" data-dismiss="modal">Зокрыть</button> -->
+        </div>
       </form>
     </div>
   </div>
