--- a/main_app/templates/tabs/game_list.html
+++ b/main_app/templates/tabs/game_list.html
@@ -2,27 +2,24 @@
 <h3>FGC app</h3>
 <p>ЕБАТЬ КОПАТЬ - ДА ИТО ЖЫ СБИСАГ ИГОРЪ?!</p>
 <hr>
-<div class="container-fluid game-card">
-  <img class="game-card-icon" src="{% static "img/carousel/wii.jpg" %}" alt="oops">
-  <div class="game-card-text  col-sm-8">
-    <p class="game-title"> <strong>GAME_TITLE</strong> </p>
-    <p class="game-description">game_description</p>
+{% for game in game_list %}
+  <div class="container-fluid game-card">
+    <img class="game-card-icon" src="{{ game.cover.url}}" alt="oops">
+    <div class="game-card-text  col-sm-8">
+      <p class="game-title"> <strong>{{game.game_title}}</strong> </p>
+      <p class="game-description">{{game.game_description}}</p>
+    </div>
+    <div class="game-score">
+      <p><strong>Е-баллы темы эфира:</strong> {{game.score}}</p>
+      <p><strong>Был эфир:</strong>
+        {% if game.was_streamed == True %}
+          YIS
+        {% else %}
+          NYOOO
+        {% endif %}
+      </p>
+    </div>
   </div>
-  <div class="game-score">
-    <p><strong>game_score:</strong> NaN</p>
-    <p><strong>WAS_STREAMED:</strong> YES</p>
-  </div>
-</div>
-<hr>
-<div class="container-fluid game-card">
-  <img class="game-card-icon" src="{% static "img/carousel/wii.jpg" %}" alt="oops">
-  <div class="game-card-text  col-sm-8">
-    <p class="game-title"> <strong>GAME_TITLE</strong> </p>
-    <p class="game-description">game_description</p>
-  </div>
-  <div class="game-score">
-    <p><strong>game_score:</strong> NaN</p>
-    <p><strong>WAS_STREAMED:</strong> YES</p>
-  </div>
-</div>
-<hr>
+  <hr>
+{% endfor %}
+ 
