found major bugs in layout of game cards

--- a/main_app/templates/base-elements/modal.html
+++ b/main_app/templates/base-elements/modal.html
@@ -18,11 +18,11 @@
         <div class="modal-body">
             <div class="form-group">
               <label for="game_title">Название </label>
-              <input type="text" class="form-control" name="game_title">
+              <input type="text" class="form-control" name="game_title" maxlength="64">
             </div>
             <div class="form-group">
               <label for="game_description">Описание</label>
-              <textarea class="form-control" rows="5" name="game_description"></textarea>
+              <textarea class="form-control" rows="5" name="game_description" maxlength="240"></textarea>
             </div>
             <div class="form-group">
               <label for="cover">картинка</label>
